the revision of the website's name.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="logo">
           <img src="asanova.png" alt="Logo">
         </div>
-        <h1>Asanova</h1>
+        <h1>Asanova-Pixel</h1>
       </header>
 
       <!-- Main Content -->
@@ -40,7 +40,7 @@
 
       <!-- Footer Section -->
       <footer class="footer">
-        <p>© 2025 Asanova. All rights reserved.</p>
+        <p>© 2025 Asanova-Pixel. All rights reserved.</p>
         <div class="contact">
           <p>Contact me at: <a href="mailto:36chronicle@gmail.com">36chronicle@gmail.com</a></p>
         </div>
